rules.v4
# Generated by iptables-save v1.6.0 on Sun May 14 17:21:50 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [7:1000]
:LOG_ACCEPT - [0:0]
:LOG_REJECT - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22001 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A LOG_ACCEPT -j LOG --log-prefix "INPUT:ACCEPT:" --log-level 6
-A LOG_ACCEPT -j ACCEPT
-A LOG_REJECT -j LOG --log-prefix "INPUT:REJECT:" --log-level 6
-A LOG_REJECT -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Sun May 14 17:21:50 2017
